# wordle_ai

./: Cargo.toml  index.html
.cargo/: config.toml
benches/: benchmark.rs  crtierion.rs  iai.rs
src/: lib.rs  main.rs  simd_word.rs
