[package]
name = "wordle_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wordle_ai"
path = "src/main.rs"

[lib]
name = "wordle_ai_lib"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false

[dependencies]

[dev-dependencies]
iai = "0.1"

[profile.bench]
debug = true
