[package]
name = "wordle_ai"
version = "0.1.0"
edition = "2021"
default-run = "wordle_ai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wordle_ai"
path = "src/main.rs"

[[bin]]
name = "count_collisions"
path = "src/bin/count_collisions.rs"

[lib]
name = "wordle_ai_lib"
path = "src/lib.rs"

[profile.release]
debug = true

[[bench]]
name = "iai"
path = "benches/iai.rs"
harness = false

[[bench]]
name = "criterion"
path = "benches/crtierion.rs"
harness = false

[dependencies]

[dev-dependencies]
bit-set = "0.5.2"
criterion = "0.3"
iai = "0.1"

[profile.bench]
debug = true
